...
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nq5-aF-ORI">
                                <rect key="frame" x="222" y="258" width="37" height="30"/>
                                <state key="normal" title="Done">
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="quit:" destination="t8j-XO-qaX" eventType="touchDown" id="0wu-G4-QJX"/>
                                </connections>
                            </button>
...
